--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -113,7 +113,7 @@
                                       </div>                      
                                </li>                            
                                <li class="contactList-item">
-                                <a [href]="even.button_2_link" class="pagebtn dc_btn_min f-w-B">{{even.button_2_text}}</a>
+                                <a [href]="even.button_2_link" target="_blank" class="pagebtn dc_btn_min f-w-B">{{even.button_2_text}}</a>
                                </li>
                             </ul>
                          </div>
@@ -158,7 +158,7 @@
                               </div>         
                          </li>
                         <li class="contactList-item" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                            <a [href]="odd.button_2_link" class="pagebtn dc_btn_min f-w-B">{{odd.button_2_text}}</a>
+                            <a [href]="odd.button_2_link" target="_blank" class="pagebtn dc_btn_min f-w-B">{{odd.button_2_text}}</a>
                         </li>
                       </ul>
                    </div>
