--- a/src/app/components/ourservices/ourservices.component.html
+++ b/src/app/components/ourservices/ourservices.component.html
@@ -74,7 +74,7 @@
              <div class="col-md-12">
                 <div class="commonLinks text-center" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                    <ul class="list-unstyled d-flex flex-wrap justify-content-center dc_btnList-spc_60">
-                      <li><a [href]="servicedata.details.button_1_link" class="pagebtn dc_btn_min f-w-B">{{servicedata.details.button_1_text}}</a></li>
+                      <li><a [href]="servicedata.details.button_1_link" target="_blank" class="pagebtn dc_btn_min f-w-B">{{servicedata.details.button_1_text}}</a></li>
                       <li>
                          <div ngbDropdown class="dropSec position-relative directList">
                            <a href="javascript:void(0)" class="pagebtn pagebtnblue dc_btn_min f-w-B getDirection" ngbDropdownToggle id="dropdownMenuButton">{{servicedata.details.button_2_text}}</a>
