--- a/src/app/components/ourteam/ourteam.component.html
+++ b/src/app/components/ourteam/ourteam.component.html
@@ -80,7 +80,7 @@
         <div class="row rowSpace">
            <div class="col-md-12">
               <ul class="list-unstyled d-flex flex-wrap justify-content-center mt__60 dc_btnList-spc_60" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                 <li><a [href]="teamsdata.details.button_1_link" class="pagebtn dc_btn_min f-w-B">{{teamsdata.details.button_1_text}}</a></li>
+                 <li><a [href]="teamsdata.details.button_1_link" target="_blank" class="pagebtn dc_btn_min f-w-B">{{teamsdata.details.button_1_text}}</a></li>
                  <li>
                   <div ngbDropdown class="dropSec position-relative directList">
                     <a href="javascript:void(0)" class="pagebtn pagebtnblue dc_btn_min f-w-B getDirection" ngbDropdownToggle id="dropdownMenuButton">{{teamsdata.details.button_2_text}}</a>
