--- a/src/app/components/team-details/team-details.component.html
+++ b/src/app/components/team-details/team-details.component.html
@@ -46,7 +46,7 @@
                      <p [innerHTML]="content"></p>
                    </div>
                    <ul class="list-unstyled d-flex flex-wrap mt__60 teamdetails_btn" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                      <li><a [href]="doctorsdata.details.button_1_link" class="pagebtn dc_btn_min f-w-B">{{doctorsdata.details.button_1_text}}</a></li>
+                      <li><a [href]="doctorsdata.details.button_1_link" target="_blank" class="pagebtn dc_btn_min f-w-B">{{doctorsdata.details.button_1_text}}</a></li>
                       <li>
                         <div ngbDropdown class="dropSec position-relative directList">
                           <a href="javascript:void(0)" class="pagebtn pagebtnblue dc_btn_min f-w-B getDirection" ngbDropdownToggle id="dropdownMenuButton">{{doctorsdata.details.button_2_text}}</a>
@@ -100,7 +100,7 @@
                                  <div class="row row_gutter_30">
                                     <div class="col-md-6">
                                        <div class="dc_txtSummary">
-                                         1
+                                         
                                           <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="doctorsdata.details.doctorsdetails[0].left_content">
                                           
                                           </div>
@@ -125,7 +125,7 @@
                                  <div class="row row_gutter_30">
                                     <div class="col-md-6">
                                        <div class="dc_txtSummary">
-                                          2
+                                          
                                           <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="doctorsdata.details.doctorsdetails[1].left_content">
                                           
                                           </div>
@@ -150,7 +150,7 @@
                                  <div class="row row_gutter_30">
                                     <div class="col-md-6">
                                        <div class="dc_txtSummary">
-                                           3
+                                           
                                           <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="doctorsdata.details.doctorsdetails[2].left_content">
                                            
                                           </div>
@@ -175,7 +175,7 @@
                                  <div class="row row_gutter_30">
                                     <div class="col-md-6">
                                        <div class="dc_txtSummary">
-                                          4
+                                          
                                           <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="doctorsdata.details.doctorsdetails[3].left_content">
                                            
                                           </div>
