--- a/src/app/components/vacation-boarding/vacation-boarding.component.html
+++ b/src/app/components/vacation-boarding/vacation-boarding.component.html
@@ -120,7 +120,7 @@
             </div>
          </div>
          <ul class="list-unstyled d-flex flex-wrap justify-content-center mt__60 dc_btnList-spc_60" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-            <li><a [href]="vacationdata.details.button_1_link" class="pagebtn dc_btn_min f-w-B">{{vacationdata.details.button_1_text}}</a></li>
+            <li><a [href]="vacationdata.details.button_1_link" target="_blank" class="pagebtn dc_btn_min f-w-B">{{vacationdata.details.button_1_text}}</a></li>
             <li>
                <div ngbDropdown class="dropSec position-relative directList">
                  <a href="javascript:void(0)" class="pagebtn pagebtnblue dc_btn_min f-w-B getDirection" ngbDropdownToggle id="dropdownMenuButton">{{vacationdata.details.button_2_text}}</a>
