--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -119,7 +119,7 @@
                       </a>
                    </div>
                    <div class="btnSec_wra d-inline">
-                      <a [href]="homepage.servicesection.button_2_link" class="pagebtn pagebtnblue f-w-B">
+                      <a [href]="homepage.servicesection.button_2_link" target="_blank" class="pagebtn pagebtnblue f-w-B">
                         {{homepage.servicesection.button_2_text}}
                       </a>
                    </div>
@@ -151,7 +151,7 @@
                   </a>
                </div>
                <div class="btnSec_wra d-inline">
-                  <a [href]="homepage.servicesection.button_2_link" class="pagebtn pagebtnblue f-w-B">
+                  <a [href]="homepage.servicesection.button_2_link" target="_blank" class="pagebtn pagebtnblue f-w-B">
                     {{homepage.servicesection.button_2_text}}
                   </a>
                </div>
