--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -87,7 +87,7 @@
              <div class="input-group mb-3">
                <input type="text" class="form-control" (focusout)="hidemsg()"  name="email" formControlName="email" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                <div class="input-group-append">
-                 <button class="btn" type="submit" [disabled]="!email.valid">Send</button>
+                 <button class="btn" type="submit">Send</button>
                </div>
              </div>
             <!-- f.email.invalid && (f.email.dirty || f.email.touched) -->
@@ -95,6 +95,9 @@
              <div class="errorMsg" *ngIf="f.email.errors && (f.email.dirty || f.email.touched)" >
                   <div *ngIf="f.email.errors.required">Email is required</div>
                   <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+              </div>
+              <div class="errorMsg" *ngIf="failed">
+                Email must be a valid email
               </div>
               <div class="input-group mb-3" *ngIf="success">
                 Thank you. We will get in touch with you shortly.
