--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -304,12 +304,12 @@
           </div>
           <div class="col-md-2 text-md-right">
             <div class="app-store" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-             <a href="" class="storeLink">
+             <a  class="storeLink">
              <img src="{{homepage.footersection.app_store_image.link}}" alt="{{homepage.footersection.app_store_image.alt}}" />
            </a>
            </div>
             <div class="google-play" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-             <a href="" class="storeLink">
+             <a  class="storeLink">
              <img src="{{homepage.footersection.play_store_image.link}}" alt="{{homepage.footersection.play_store_image.alt}}" />
            </a>
            </div>
