--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -13,7 +13,7 @@
                         </div>
                         <div class="backBtn spacer_b_90">
                            <ul class="list-unstyled d-flex flex-wrap justify-content-center dc_btnList-spc_60">
-                              <li><a href="#" class="pagebtn dc_btn_min f-w-B">Return to homepage</a></li>
+                              <li><a href="/" class="pagebtn dc_btn_min f-w-B">Return to homepage</a></li>
                            </ul>
                         </div>
                      </div>
