--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -719,7 +719,16 @@ font-size: 2.143vw;color: transparent;
 .pagebtn.pagebtngreen:hover{
     border: 1px solid #06A33E;
     background-color: #06A33E;
+    color: #fff;
+}
+.contactAct .pagebtn {
+    border: 1px solid #06a33e;
+    background-color: initial;
     margin-left: 2.083vw;
+    color: #0e1f3b;
+}
+.contactAct .contact-active {
+    background-color: #2ead5a;
     color: #fff;
 }
 .contnt {
@@ -1068,6 +1077,7 @@ z-index: 9;}
 .testimonials.dc_testiArrow .slick-initialized .slick-slide {height: 400px;}
 .dcTeam_img img{border-radius: 8px}
 .pagebtn.pagebtngreen{ margin-left: 15px;}
+.contactAct .pagebtn{margin: 5px;}
 .errorTxt{ font-size: 14px; max-width: 100%;}
 .teamdetails_btn li:last-child { margin-left: 0;}
 .mt__60 {margin-top: 30px;}
