--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -12,7 +12,7 @@
 </div>
 <!-- Loader End -->
 <div class="dc_pg_spcHead" *ngIf="contact">
-    <div class="main-container">
+    <div class="main-container" *ngIf="contact">
       <fieldset data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
           <h1 class="dc_pg_title">{{contact.pagetitle}}</h1>
@@ -25,25 +25,25 @@
     </div>
     <div class="dc_spacer_t_90 dc_spacer_b_60">
        <div class="main-container">
-          <div class="row row_gutter_30">
+          <div class="row row_gutter_30" *ngIf="contact">
              <div class="col-md-6">
                 <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
-                   <h2 class="headingSec line_H_1 mrg-b-30">{{contact.details.heading}}</h2>
+                   <h2 class="headingSec line_H_1 mrg-b-30"  [innerHTML]="heading"></h2>
                 </div>
                 <div class="hrLine mrg-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400"></div>
              </div>
           </div>
-          <div class="row row_gutter_30">
+          <div class="row row_gutter_30" *ngIf="contact">
              <div class="col-md-6">
                 <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.left_content">
+                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="left_content">
                      
                    </div>
                 </div>
              </div>
              <div class="col-md-6">
                 <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.right_content">
+                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="right_content">
                     
                    </div>
                 </div>
@@ -51,23 +51,23 @@
           </div>
        </div>
     </div>
-    <div class="dc_spacer_t_30 dc_spacer_b_90">
+    <div class="dc_spacer_t_30 dc_spacer_b_90" >
        <div class="main-container">
           <div class="row row_gutter_30">
              <div class="col-md-6">
                 <div class="dc_About_media_wrap mar-b-30">
-                   <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
+                   <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD" *ngIf="contact">
                       <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image1.link}}" alt="{{contact.details.image1.alt}}" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img1.link}}" alt="{{img1.alt}}" /></div>
                       </li>
                       <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image2.link}}" alt="{{contact.details.image2.alt}}" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img2.link}}" alt="{{img2.alt}}" /></div>
                       </li>
                       <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image3.link}}" alt="{{contact.details.image3.alt}}" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img3.link}}" alt="{{img3.alt}}" /></div>
                       </li>
                       <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="800">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image4.link}}" alt="{{contact.details.image4.alt}}" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img4.link}}" alt="{{img4.alt}}" /></div>
                       </li>
                    </ul>
                 </div>
@@ -160,4 +160,6 @@
        </div>
     </div>
  </div>
- <app-footer-top [dataString]="footersection"></app-footer-top>
+ <fieldset *ngIf="footersection">
+   <app-footer-top [dataString]="footersection"></app-footer-top>
+</fieldset>
