--- a/src/app/components/contact-gurgaon/contact-gurgaon.component.html
+++ b/src/app/components/contact-gurgaon/contact-gurgaon.component.html
@@ -124,7 +124,7 @@
                
                                 <div ngbDropdownMenu aria-labelledby="dropdownMenuButton" class="dirList">
                                    <ul class="dire_listSec mb-0 list-unstyled" *ngFor="let buttondata of contact.details.locations">
-                                      <li class="list-item"> <a [routerLink]="buttondata.link" class="direLink" >{{buttondata.name}}</a> </li>
+                                      <li class="list-item"> <a [href]="buttondata.link" target="_blank" class="direLink" >{{buttondata.name}}</a> </li>
                                    </ul>
                                 </div>
                               </div>
@@ -139,4 +139,6 @@
        </div>
     </div>
  </div>
- <app-footer-top [dataString]="footersection"></app-footer-top>
+ <fieldset *ngIf="footersection">
+   <app-footer-top [dataString]="footersection"></app-footer-top>
+</fieldset>
