--- a/src/app/layout/footer-top/footer-top.component.html
+++ b/src/app/layout/footer-top/footer-top.component.html
@@ -17,12 +17,12 @@
           </div>
           <div class="col-md-2 text-md-right">
              <div class="app-store" *ngIf="footersection" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                <a [href]="footersection.app_store_link" class="storeLink">
+                <a  class="storeLink">
                 <img [src]="footersection.app_store_image.link" [alt]="footersection.app_store_image.alt" class="w-100" />
                 </a>
              </div>
              <div class="google-play" *ngIf="footersection" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-                <a [href]="footersection.play_store_link" class="storeLink">
+                <a  class="storeLink">
                 <img [src]="footersection.play_store_image.link" [alt]="footersection.play_store_image.alt" class="w-100" />
                 </a>
              </div>
